# OMSens

./: .gitignore  CMakeLists.txt  HEAT_MAP_INICIAL.py  Jenkinsfile  LICENSE  Makefile.omdev.mingw  Makefile.unix  README.md  build_hooks.py  calculate_parameters_new_values_for_a_percent.py  files_aux.py  individual_sens_calculator.py  interactive_plot.py  interactive_plot_temp.py  mos_script_factory.py  multiparam_sweep.py  plot_csv.py  plot_predefined_heatmaps.py  plotting_test.mos  predefined_plots.py  predefined_plots_wp2.py  predefined_plots_wp3.py  pyproject.toml  pytest.ini  run_and_plot_model.py  setup.py  sweeping_mos_creator.py  sweeping_mos_writer.py  vectorial_analysis.py  w3_sens_calculator.py  world3_scenarios_sweeps.py  world3_scenarios_sweeps_multiparam.py  world3_scenarios_sweeps_uniparam.py
analysis/: indiv_sens.py  sensitivities_to_parameters_analysis_from_csv.py
callable_methods/: individual_sens_calculator.py  multiparam_sweep.py  plot_histogram.py  plot_scatter.py  plot_scatterplot.py  vectorial_analysis.py
examples/: GoodwinKeen.mo  LotkaVolterra.mo
filesystem/: files_aux.py
fortran/: Curvif.for  Makefile  Rutf.for  SystemDynamics.WorldDynamics.World3.Scenario_1_init.xml  data.f90  main.for  readme.md  searchAndReplaceXML.py  test_01.txt  test_template.f90  w3WrapperFunc.for  zxpowl.for
fortran_interface/: Curvif.for  curvif_simplified.pyf
misc/: csv_output_to_csv_matrix_converter.py  parametersFromXMLToCSV.py
modelica_interface/: build_model.py  compiled_model.py  run_omc.py
mos_writer/: calculate_sensitivities_mos_writer.py  formulas.py  mos_script_factory.py  parameter_sweep_settings.py  sweeping_mos_writer.py
plotting/: plot_csv.py  plot_heatmap.py  plot_lines.py  plot_specs.py  plot_sweep.py  plot_vectorial.py  scatter_plotter.py
plugin_communication/: qt_communicator.py
python/: .gitignore  BORRAME_params.mos  individual_sens_calculator.py  interactive_plot.py  multiparam_sweep.py  vectorial_analysis.py  w3_sens_calculator.py  world3_scenarios_sweeps_multiparam.py
readme_writer/: readme_writer.py
resource/: BouncingBall.mo  OldWorld3VarNames.csv  sens_analysis_10percent_yr2100_population.csv  sens_analysis_2percent_yr2100_population.csv  sens_analysis_5percent_yr2100_population.csv  standard_run_params_defaults.csv  standard_run_params_defaults.py  vermeulen_and_jongh.txt  w3_only1901_time_fix_paramvarmatrix.csv  w3_real_params.csv
running/: run_omc.py  sweep.py
settings/: gral_settings.py  settings_world3_sweep.py
sweeping/: iterationInfo.py  run_and_plot_model.py
testing/: test_build_model.py  test_dynamic_sens_matrix.py  (+8 more)
(+155 files in other folders)
