# This file is part of OpenModelica.
# Copyright (c) 1998-CurrentYear, Open Source Modelica Consortium (OSMC),
# c/o Linköpings universitet, Department of Computer and Information Science,
# SE-58183 Linköping, Sweden.

# All rights reserved.

# THIS PROGRAM IS PROVIDED UNDER THE TERMS OF GPL VERSION 3 LICENSE OR
# THIS OSMC PUBLIC LICENSE (OSMC-PL) VERSION 1.2.
# ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS PROGRAM CONSTITUTES
# RECIPIENT'S ACCEPTANCE OF THE OSMC PUBLIC LICENSE OR THE GPL VERSION 3,
# ACCORDING TO RECIPIENTS CHOICE.

# The OpenModelica software and the Open Source Modelica
# Consortium (OSMC) Public License (OSMC-PL) are obtained
# from OSMC, either from the above address,
# from the URLs: http://www.ida.liu.se/projects/OpenModelica or
# http://www.openmodelica.org, and in the OpenModelica distribution.
# GNU version 3 is obtained from: http://www.gnu.org/copyleft/gpl.html.

# This program is distributed WITHOUT ANY WARRANTY; without
# even the implied warranty of  MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE, EXCEPT AS EXPRESSLY SET FORTH
# IN THE BY RECIPIENT SELECTED SUBSIDIARY LICENSE CONDITIONS OF OSMC-PL.

# See the full OSMC Public License conditions for more details.

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "meson",
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "OMSens"
version = "1.0.2"
description = "OpenModelica sensitivity analysis and optimization module"
readme = "README.md"
authors = [
    { name = "Rodrigo Castro", email = "rcastro@dc.uba.ar" },
]
maintainers = [
    { name = "Adeel Asghar", email = "adeel.asghar@liu.se" }
]
license = { file = "license.txt" }
requires-python = ">=3.13"
dependencies = [
    "six",
    "pytest",
    "matplotlib",
    "kiwisolver",
    "Pillow",
    "numpy",
    "pandas"
]

# include OMSens and all its subpackages
[tool.setuptools.packages.find]
where = ["src"]
include = ["OMSens*", "OMSens.*"]

# include fortran interface files
[tool.setuptools.package-data]
"OMSens" = ["fortran_interface/*"]

[project.urls]
Homepage = "http://openmodelica.org/"
Documentation = "https://openmodelica.org/doc/OpenModelicaUsersGuide/latest/parametersensitivity.html#single-and-multi-parameter-sensitivities-with-omsens"
"Source Code" = "https://github.com/OpenModelica/OMSens"
Issues = "https://github.com/OpenModelica/OMSens/issues"
"Release Notes" = "https://github.com/OpenModelica/OMSens/releases"
Download = "https://pypi.org/project/OMSens/#files"
